solved issue with modal and scroll(by html{overflow-y:scroll}

--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,5 +1,6 @@
 html {
     box-sizing: border-box;
+    overflow-y: scroll;
 }
 
 *,
@@ -13,6 +14,7 @@ body{
     font-size: 16px;
     overflow-x: hidden;
     background-color: #0f231e;
+    width: 100%;
 }
 .container{
     max-width: 1200px;
